syntax = "proto2";

package com.gonwan.snippet.grpc;

option java_multiple_files = true;
option java_package = "com.gonwan.snippet.grpc";
option java_outer_classname = "HelloWorldProto";

service TestService {
    rpc SayHello (HelloRequest) returns (HelloResponse) { }
    rpc DownloadFile (DownloadRequest) returns (stream DownloadResponse) { }
}

message HelloRequest {
    optional string name = 1;
}

message HelloResponse {
    optional string message = 1;
}

message DownloadRequest {
    optional string filename = 1;
}

message DownloadResponse {
    optional int64 id = 1;
    optional bytes chunk = 2;
}
